nextcloud-deployment.yaml
---
# Creating namespace for nextcloud and stackgres to be installed in
apiVersion: v1
kind: Namespace
metadata:
  name: nextcloud
