keycloak-deployment.yaml
---
# Creating namespace for keycloak and stackgres to be installed in
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
---
# Allowing traefik to route to nginx pods
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak
  namespace: keycloak
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`keycloaktest.timo.be`)
      kind: Rule
      services:
        - name: keycloak
          port: 80
      middlewares:
        - name: secureheaders
          namespace: traefik
        - name: ratelimit
          namespace: traefik
  tls:
    secretName: wildcard-timo-be-production-tls
