longhorn-deployment.yaml
---
# Creating namespace for longhorn
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
---
# Allowing traefik to route to longhorn
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorntest.timo.be`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
      middlewares:
        - name: secureheaders
          namespace: traefik
        - name: ratelimit
          namespace: traefik
        - name: longhornheaders
          namespace: traefik
  tls:
    secretName: wildcard-timo-be-production-tls
