portainer-deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: portainer
---
# Allowing traefik to route to portainer
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: portainer
  namespace: portainer
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`portainertest.timo.be`)
      kind: Rule
      services:
        - name: portainer
          port: 9443
      middlewares:
        - name: secureheaders
          namespace: traefik
        - name: ratelimit
          namespace: traefik
  tls:
    secretName: wildcard-timo-be-production-tls
